# sentinel

./: .gitignore  Makefile  README.md  com.sentinel.daemon.plist  docker-compose.yml  pyproject.toml  run.sh  sentinel-daemon.sh  sentinel.toml  test_pipeline.py
scripts/: export_and_deploy.sh  sentinel_ctl.sh  setup.sh
sentinel/: cli.py  config.py  constants.py  events.py  models.py  pipeline.py
sentinel/core/: duckdb_client.py  lancedb_client.py  neo4j_client.py  pidfile.py  redis_client.py  sqlite_client.py  storage.py
sentinel/extraction/: causal_retriever.py  classifier.py  deduplicator.py  embedder.py  html_cleaner.py  hyde.py  llm_extractor.py  ner_engine.py
sentinel/ingestion/: base.py  frontier.py  scheduler.py
sentinel/ingestion/sources/: arxiv_monitor.py  commoncrawl.py  ct_monitor.py  github_trending.py  hackernews.py  patent_monitor.py  rss_aggregator.py  sitemap_crawler.py  web_crawler.py
sentinel/intelligence/: causal_simulator.py  court.py  immune_explorer.py  predictor.py  red_team.py
sentinel/interface/: __init__.py  alerts.py  api.py  dashboard.html  dashboard.py  graph.html  graph_server.py  reports.py
sentinel/knowledge/: __init__.py  entity_resolver.py  graph_builder.py  relationship_extractor.py
sentinel/signals/: __init__.py  anomaly_detector.py  burst_detector.py  cascade_detector.py  signal_aggregator.py
sentinel/stealth/: annihilator.py  rate_limiter.py  reconstructor.py  robots_parser.py  temporal_arbitrage.py
sentinel/utils/: logging.py  retry.py
tests/integration/: test_signal_pipeline.py
tests/unit/: test_core.py  test_intelligence.py  test_stealth.py
