[project]
name = "sentinel"
version = "1.0.0"
description = "Autonomous Web Intelligence & Signal Detection System"
requires-python = ">=3.12"
license = {text = "Proprietary"}

dependencies = [
    # Core
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "tomli>=2.0",
    "click>=8.1",
    "structlog>=23.0",
    "rich>=13.0",

    # Async
    "anyio>=4.0",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",

    # Databases
    "redis>=5.0",
    "lancedb>=0.15",
    "duckdb>=1.1",
    "neo4j>=5.20",

    # Web crawling
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "feedparser>=6.0",
    "playwright>=1.45",

    # ML / NLP
    "sentence-transformers>=3.0",
    "spacy>=3.7",
    "torch>=2.3",
    "datasketch>=1.6",
    "numpy>=1.26",

    # API / Interface
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "apscheduler>=3.10",

    # Utilities
    "orjson>=3.10",
    "tenacity>=8.3",
    "bloom-filter2>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
full = [
    "crawl4ai>=0.8",
    "curl-cffi>=0.7",
    "stumpy>=1.12",
    "prophet>=1.1",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "praw>=7.7",
]

[project.scripts]
sentinel = "sentinel.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sentinel*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
